--- a/tracking-whisker/1_marking_outside_docker.ipynb
+++ b/tracking-whisker/1_marking_outside_docker.ipynb
@@ -50,6 +50,7 @@
    "metadata": {
     "colab": {},
     "colab_type": "code",
+    "collapsed": true,
     "id": "jqLZhp7EoEI0"
    },
    "outputs": [],
@@ -276,6 +277,7 @@
    "metadata": {
     "colab": {},
     "colab_type": "code",
+    "collapsed": true,
     "id": "eMeUwgxPoEJP",
     "scrolled": true
    },
@@ -303,6 +305,7 @@
    "metadata": {
     "colab": {},
     "colab_type": "code",
+    "collapsed": true,
     "id": "_pOvDq_2oEJW"
    },
    "outputs": [],
@@ -328,6 +331,7 @@
    "metadata": {
     "colab": {},
     "colab_type": "code",
+    "collapsed": true,
     "id": "nv4zlbrnoEJg"
    },
    "outputs": [],
@@ -354,6 +358,7 @@
    "metadata": {
     "colab": {},
     "colab_type": "code",
+    "collapsed": true,
     "id": "Y_LZiS_0oEJl"
    },
    "outputs": [],
@@ -379,6 +384,7 @@
    "metadata": {
     "colab": {},
     "colab_type": "code",
+    "collapsed": true,
     "id": "gkbaBOJVoEJs"
    },
    "outputs": [],
@@ -403,6 +409,7 @@
    "metadata": {
     "colab": {},
     "colab_type": "code",
+    "collapsed": true,
     "id": "n_FpEXtyoEJy"
    },
    "outputs": [],
@@ -417,6 +424,7 @@
    "metadata": {
     "colab": {},
     "colab_type": "code",
+    "collapsed": true,
     "id": "CHzstWr8oEJ2"
    },
    "outputs": [],
@@ -442,6 +450,7 @@
    "metadata": {
     "colab": {},
     "colab_type": "code",
+    "collapsed": true,
     "id": "ytQoxIldoEJ7"
    },
    "outputs": [],
@@ -466,6 +475,7 @@
    "metadata": {
     "colab": {},
     "colab_type": "code",
+    "collapsed": true,
     "id": "6aDF7Q7KoEKE"
    },
    "outputs": [],
@@ -490,6 +500,7 @@
    "metadata": {
     "colab": {},
     "colab_type": "code",
+    "collapsed": true,
     "id": "gX21zZbXoEKJ"
    },
    "outputs": [],
@@ -507,9 +518,9 @@
    "version": "0.3.2"
   },
   "kernelspec": {
-   "display_name": "Python (dlc)",
+   "display_name": "py3DLC",
    "language": "python",
-   "name": "dlc_kernel"
+   "name": "py3dlc"
   },
   "language_info": {
    "codemirror_mode": {
@@ -521,7 +532,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.6.5"
   },
   "varInspector": {
    "cols": {
