--- a/tracking-whisker/2_training_inside_docker.ipynb
+++ b/tracking-whisker/2_training_inside_docker.ipynb
@@ -137,6 +137,7 @@
    "metadata": {
     "colab": {},
     "colab_type": "code",
+    "collapsed": true,
     "id": "sXufoX6INe6w"
    },
    "outputs": [],
@@ -195,6 +196,7 @@
    "metadata": {
     "colab": {},
     "colab_type": "code",
+    "collapsed": true,
     "id": "Z7ZlDr3wV4D1"
    },
    "outputs": [],
@@ -5351,7 +5353,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   }
@@ -5381,7 +5385,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.4"
   },
   "varInspector": {
    "cols": {
