--- a/scripts/dlc-postprocess.ipynb
+++ b/scripts/dlc-postprocess.ipynb
@@ -1,15 +1,39 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 2,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "# DLC Postprocess Library\n",
+    "\n",
+    "Run after training has been performed, and at least 1 video has been analyzed\n",
+    "\n",
+    "**Plan:**\n",
+    "1. Load config file, tracked video, and tracking results\n",
+    "2. Speci"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/anaconda3/envs/py36qt5/lib/python3.6/site-packages/h5py/__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
+      "  from ._conv import register_converters as _register_converters\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import h5py\n",
     "\n",
     "from PyQt5.QtWidgets import QFileDialog\n",
+    "\n",
+    "import deeplabcut\n",
     "\n",
     "from lib.parse_dlc_csv import parse_dlc_csv\n",
     "from lib.constraints import likelihood_constrain, velocity_constrain, edge_constrain\n",
@@ -30,7 +54,17 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using original video /media/aleksejs/DataHDD/work/data/Pia/Tracking20181022_compressed/2018.10.22_18_01_56.avi\n",
+      "Using tracking file /media/aleksejs/DataHDD/work/codes/image-analysis/behavioural/DeepLabCut_old/DeepLabCut/Generating_a_Training_Set/data-pia_shaved_running_1_test/CollectedData_Pia.csv\n",
+      "Results will be saved in /media/aleksejs/DataHDD/work/codes/image-analysis/behavioural\n"
+     ]
+    }
+   ],
    "source": [
     "param = {\n",
     "  \"NODE_NAMES\"       : [\"ShoulderBlade\", \"Shoulder\", \"Wrist\", \"Finger\", \"Tip\"],\n",
@@ -43,10 +77,12 @@
     "  \"STICKMAN_CROP_Y\"  : None\n",
     "}\n",
     "\n",
+    "param[\"CONF_FNAME\"] = gui_fname(\"Select config file...\", \"./\", \"Config Files (*.yaml)\")\n",
     "param[\"AVI_FNAME\"] = gui_fname(\"Select original video file...\", \"./\", \"Video Files (*.avi)\")\n",
     "param[\"CSV_FNAME\"] = gui_fname(\"Select tracking file...\", \"./\", \"CSV Files (*.csv)\")\n",
-    "param[\"REZ_FPATH\"] = gui_fpath(\"Select result file\", \"./\")\n",
+    "param[\"REZ_FPATH\"] = gui_fpath(\"Select result path\", \"./\")\n",
     "\n",
+    "print(\"Using config file\", param[\"CONF_FNAME\"])\n",
     "print(\"Using original video\", param[\"AVI_FNAME\"])\n",
     "print(\"Using tracking file\", param[\"CSV_FNAME\"])\n",
     "print(\"Results will be saved in\", param[\"REZ_FPATH\"])"
@@ -67,7 +103,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#########################\n",
@@ -117,7 +155,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#########################\n",
@@ -133,6 +173,13 @@
     "\n",
     "# Write stickman video\n",
     "stickman(X, Y, param, nodeLowConf, nodeLowConstr, edgeLowConf, edgeLowConstr)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Training-Only"
    ]
   },
   {
@@ -155,7 +202,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "frameIdxs = np.linspace(1, nFrames, nFrames).astype(int)\n",
@@ -184,9 +233,31 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
-   "source": []
+   "source": [
+    "deeplabcut.extract_outlier_frames(path_config_file, [param[\"AVI_FNAME\"]])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Create new training dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "deeplabcut.create_training_dataset(path_config_file)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -203,7 +274,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   },
@@ -220,7 +293,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Set all bad coordinates to NAN\n",
@@ -239,9 +314,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python3.6",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "py36"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -253,7 +328,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
