notes, multiple videos

--- a/scripts/dlc-training-preprocess.ipynb
+++ b/scripts/dlc-training-preprocess.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -51,27 +51,47 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Created \"/media/aleksejs/DataHDD/work/codes/image-analysis/behavioural/DeepLabCut/examples/superlol/Tracking-Pia-2019-03-18/videos\"\n",
-      "Created \"/media/aleksejs/DataHDD/work/codes/image-analysis/behavioural/DeepLabCut/examples/superlol/Tracking-Pia-2019-03-18/labeled-data\"\n",
-      "Created \"/media/aleksejs/DataHDD/work/codes/image-analysis/behavioural/DeepLabCut/examples/superlol/Tracking-Pia-2019-03-18/training-datasets\"\n",
-      "Created \"/media/aleksejs/DataHDD/work/codes/image-analysis/behavioural/DeepLabCut/examples/superlol/Tracking-Pia-2019-03-18/dlc-models\"\n",
+      "Adding more videos\n",
+      "Currently using videos: ['/media/aleksejs/DataHDD/work/data/Pia/Tracking20180928/cropped/rez1/2018.09.28_16_08_50_cropped.avi']\n",
+      "Add more videos? (y/n) :y\n",
+      "Adding more videos\n",
+      "Currently using videos: ['/media/aleksejs/DataHDD/work/data/Pia/Tracking20180928/cropped/rez1/2018.09.28_16_08_50_cropped.avi', '/media/aleksejs/DataHDD/work/data/Pia/Tracking20180928/cropped/rez2/2018.09.28_16_02_57_cropped.avi']\n",
+      "Add more videos? (y/n) :n\n",
+      "Created \"/media/aleksejs/DataHDD/work/lol/Tracking-Pia-2019-03-19/videos\"\n",
+      "Created \"/media/aleksejs/DataHDD/work/lol/Tracking-Pia-2019-03-19/labeled-data\"\n",
+      "Created \"/media/aleksejs/DataHDD/work/lol/Tracking-Pia-2019-03-19/training-datasets\"\n",
+      "Created \"/media/aleksejs/DataHDD/work/lol/Tracking-Pia-2019-03-19/dlc-models\"\n",
       "Creating the symbolic link of the video\n",
-      "Created the symlink of /media/aleksejs/DataHDD/work/codes/image-analysis/behavioural/DeepLabCut/examples/Reaching-Mackenzie-2018-08-30/videos/reachingvideo1.avi to /media/aleksejs/DataHDD/work/codes/image-analysis/behavioural/DeepLabCut/examples/superlol/Tracking-Pia-2019-03-18/videos/reachingvideo1.avi\n",
-      "/media/aleksejs/DataHDD/work/codes/image-analysis/behavioural/DeepLabCut/examples/superlol/Tracking-Pia-2019-03-18/videos/reachingvideo1.avi\n",
-      "Generated \"/media/aleksejs/DataHDD/work/codes/image-analysis/behavioural/DeepLabCut/examples/superlol/Tracking-Pia-2019-03-18/config.yaml\"\n",
+      "Created the symlink of /media/aleksejs/DataHDD/work/data/Pia/Tracking20180928/cropped/rez1/2018.09.28_16_08_50_cropped.avi to /media/aleksejs/DataHDD/work/lol/Tracking-Pia-2019-03-19/videos/2018.09.28_16_08_50_cropped.avi\n",
+      "Created the symlink of /media/aleksejs/DataHDD/work/data/Pia/Tracking20180928/cropped/rez2/2018.09.28_16_02_57_cropped.avi to /media/aleksejs/DataHDD/work/lol/Tracking-Pia-2019-03-19/videos/2018.09.28_16_02_57_cropped.avi\n",
+      "/media/aleksejs/DataHDD/work/lol/Tracking-Pia-2019-03-19/videos/2018.09.28_16_08_50_cropped.avi\n",
+      "/media/aleksejs/DataHDD/work/lol/Tracking-Pia-2019-03-19/videos/2018.09.28_16_02_57_cropped.avi\n",
+      "Generated \"/media/aleksejs/DataHDD/work/lol/Tracking-Pia-2019-03-19/config.yaml\"\n",
       "\n",
-      "A new project with name Tracking-Pia-2019-03-18 is created at /media/aleksejs/DataHDD/work/codes/image-analysis/behavioural/DeepLabCut/examples/superlol and a configurable file (config.yaml) is stored there. Change the parameters in this file to adapt to your project's needs.\n",
+      "A new project with name Tracking-Pia-2019-03-19 is created at /media/aleksejs/DataHDD/work/lol and a configurable file (config.yaml) is stored there. Change the parameters in this file to adapt to your project's needs.\n",
       " Once you have changed the configuration file, use the function 'extract_frames' to select frames for labeling.\n",
       ". [OPTIONAL] Use the function 'add_new_videos' to add new videos to your project (at any stage).\n"
      ]
     }
    ],
    "source": [
-    "task='Tracking' # Enter the name of your experiment Task\n",
-    "experimenter='Pia' # Enter the name of the experimenter\n",
-    "pwd_workdir = gui_fpath(\"Select new project directory...\", \"./\")\n",
-    "pwd_videos  = gui_fnames(\"Select original video files...\", \"./\", \"Video Files (*.avi)\")\n",
+    "# USER: Enter task parameters\n",
+    "task='Tracking'     # Enter the name of your experiment Task\n",
+    "experimenter='Pia'  # Enter the name of the experimenter\n",
     "\n",
+    "# GUI: Select working directory\n",
+    "pwd_workdir = gui_fpath(\"Select new project directory...\", \"./\")\n",
+    "\n",
+    "# GUI: Select videos for training\n",
+    "pwd_videos = []\n",
+    "add_videos_done = False\n",
+    "while not add_videos_done:\n",
+    "    print(\"Adding more videos\")\n",
+    "    pwd_videos += gui_fnames(\"Select original video files...\", \"./\", \"Video Files (*.avi)\")\n",
+    "    print(\"Currently using videos:\", pwd_videos)\n",
+    "    add_videos_done = input(\"Add more videos? (y/n) :\") != \"y\"\n",
+    "\n",
+    "# DEEPLABCUT: Create new project\n",
     "path_config_file = deeplabcut.create_new_project(task,experimenter,pwd_videos, working_directory=pwd_workdir, copy_videos=False)"
    ]
   },
