--- a/scripts/dlc-training-preprocess.ipynb
+++ b/scripts/dlc-training-preprocess.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -52,23 +52,18 @@
      "output_type": "stream",
      "text": [
       "Adding more videos\n",
-      "Currently using videos: ['/media/aleksejs/DataHDD/work/data/Pia/Tracking20180928/cropped/rez1/2018.09.28_16_08_50_cropped.avi']\n",
-      "Add more videos? (y/n) :y\n",
-      "Adding more videos\n",
-      "Currently using videos: ['/media/aleksejs/DataHDD/work/data/Pia/Tracking20180928/cropped/rez1/2018.09.28_16_08_50_cropped.avi', '/media/aleksejs/DataHDD/work/data/Pia/Tracking20180928/cropped/rez2/2018.09.28_16_02_57_cropped.avi']\n",
+      "Currently using videos: ['/media/aleksejs/DataHDD/work/data/Pia/Tracking20181022_compressed/2018.10.22_18_01_56.avi']\n",
       "Add more videos? (y/n) :n\n",
-      "Created \"/media/aleksejs/DataHDD/work/lol/Tracking-Pia-2019-03-19/videos\"\n",
-      "Created \"/media/aleksejs/DataHDD/work/lol/Tracking-Pia-2019-03-19/labeled-data\"\n",
-      "Created \"/media/aleksejs/DataHDD/work/lol/Tracking-Pia-2019-03-19/training-datasets\"\n",
-      "Created \"/media/aleksejs/DataHDD/work/lol/Tracking-Pia-2019-03-19/dlc-models\"\n",
+      "Created \"/media/aleksejs/DataHDD/work/codes/image-analysis/behavioural/dlc-scripts/results/test1/Tracking-Pia-2019-03-19/videos\"\n",
+      "Created \"/media/aleksejs/DataHDD/work/codes/image-analysis/behavioural/dlc-scripts/results/test1/Tracking-Pia-2019-03-19/labeled-data\"\n",
+      "Created \"/media/aleksejs/DataHDD/work/codes/image-analysis/behavioural/dlc-scripts/results/test1/Tracking-Pia-2019-03-19/training-datasets\"\n",
+      "Created \"/media/aleksejs/DataHDD/work/codes/image-analysis/behavioural/dlc-scripts/results/test1/Tracking-Pia-2019-03-19/dlc-models\"\n",
       "Creating the symbolic link of the video\n",
-      "Created the symlink of /media/aleksejs/DataHDD/work/data/Pia/Tracking20180928/cropped/rez1/2018.09.28_16_08_50_cropped.avi to /media/aleksejs/DataHDD/work/lol/Tracking-Pia-2019-03-19/videos/2018.09.28_16_08_50_cropped.avi\n",
-      "Created the symlink of /media/aleksejs/DataHDD/work/data/Pia/Tracking20180928/cropped/rez2/2018.09.28_16_02_57_cropped.avi to /media/aleksejs/DataHDD/work/lol/Tracking-Pia-2019-03-19/videos/2018.09.28_16_02_57_cropped.avi\n",
-      "/media/aleksejs/DataHDD/work/lol/Tracking-Pia-2019-03-19/videos/2018.09.28_16_08_50_cropped.avi\n",
-      "/media/aleksejs/DataHDD/work/lol/Tracking-Pia-2019-03-19/videos/2018.09.28_16_02_57_cropped.avi\n",
-      "Generated \"/media/aleksejs/DataHDD/work/lol/Tracking-Pia-2019-03-19/config.yaml\"\n",
+      "Created the symlink of /media/aleksejs/DataHDD/work/data/Pia/Tracking20181022_compressed/2018.10.22_18_01_56.avi to /media/aleksejs/DataHDD/work/codes/image-analysis/behavioural/dlc-scripts/results/test1/Tracking-Pia-2019-03-19/videos/2018.10.22_18_01_56.avi\n",
+      "/media/aleksejs/DataHDD/work/codes/image-analysis/behavioural/dlc-scripts/results/test1/Tracking-Pia-2019-03-19/videos/2018.10.22_18_01_56.avi\n",
+      "Generated \"/media/aleksejs/DataHDD/work/codes/image-analysis/behavioural/dlc-scripts/results/test1/Tracking-Pia-2019-03-19/config.yaml\"\n",
       "\n",
-      "A new project with name Tracking-Pia-2019-03-19 is created at /media/aleksejs/DataHDD/work/lol and a configurable file (config.yaml) is stored there. Change the parameters in this file to adapt to your project's needs.\n",
+      "A new project with name Tracking-Pia-2019-03-19 is created at /media/aleksejs/DataHDD/work/codes/image-analysis/behavioural/dlc-scripts/results/test1 and a configurable file (config.yaml) is stored there. Change the parameters in this file to adapt to your project's needs.\n",
       " Once you have changed the configuration file, use the function 'extract_frames' to select frames for labeling.\n",
       ". [OPTIONAL] Use the function 'add_new_videos' to add new videos to your project (at any stage).\n"
      ]
@@ -104,11 +99,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/anaconda3/envs/dlc/lib/python3.6/site-packages/deeplabcut/generate_training_dataset/frame_extraction.py:100: YAMLLoadWarning: calling yaml.load() without Loader=... is deprecated, as the default Loader is unsafe. Please read https://msg.pyyaml.org/load for full details.\n",
+      "  cfg = yaml.load(ymlfile)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Config file read successfully.\n",
+      "Do you want to extract (perhaps additional) frames for video: /media/aleksejs/DataHDD/work/data/Pia/Tracking20181022_compressed/2018.10.22_18_01_56.avi ?\n",
+      "yes/noyes\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "39it [00:00, 383.64it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Extracting frames based on kmeans ...\n",
+      "Kmeans-quantization based extracting of frames from 0.0  seconds to 27.0  seconds.\n",
+      "Extracting and downsampling... 5400  frames from the video.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "5400it [00:11, 463.02it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Kmeans clustering ... (this might take a while)\n",
+      "\n",
+      "Frames were selected.\n",
+      "You can now label the frames using the function 'label_frames' (if you extracted enough frames for all videos).\n"
+     ]
+    }
+   ],
    "source": [
     "deeplabcut.extract_frames(path_config_file, 'automatic', 'kmeans', crop=False)"
    ]
@@ -125,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -157,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -168,8 +212,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Creating images with labels by Mackenzie.\n",
-      "They are stored in the following folder: /media/aleksejs/DataHDD/work/codes/image-analysis/behavioural/DeepLabCut/examples/mylol/Reaching-Mackenzie-2019-03-18/labeled-data/reachingvideo1_labeled.\n",
+      "Creating images with labels by Pia.\n",
+      "They are stored in the following folder: /media/aleksejs/DataHDD/work/codes/image-analysis/behavioural/dlc-scripts/results/test1/Tracking-Pia-2019-03-19/labeled-data/2018.10.22_18_01_56_labeled.\n",
       "If all the labels are ok, then use the function 'create_training_dataset' to create the training dataset!\n"
      ]
     }
@@ -204,31 +248,6 @@
     "\n",
     "#Once all folders are relabeled, check them and advance. See how to check labels, above!\n",
     "deeplabcut.merge_datasets(path_config_file)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "colab_type": "text",
-    "id": "xNi9s1dboEJN"
-   },
-   "source": [
-    "## Create a training dataset"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "collapsed": true,
-    "id": "eMeUwgxPoEJP",
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "deeplabcut.create_training_dataset(path_config_file)"
    ]
   }
  ],
