editing dlc paths automatic - 2

--- a/scripts/dlc-tracking.ipynb
+++ b/scripts/dlc-tracking.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -67,6 +67,15 @@
     "print(\"Using video files\", pwd_videos)\n",
     "\n",
     "deeplabcut.analyze_videos(pwd_config, pwd_videos)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "deeplabcut.analyze_videos?"
    ]
   },
   {
