--- a/scripts/dlc-postprocess.ipynb
+++ b/scripts/dlc-postprocess.ipynb
@@ -15,21 +15,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/anaconda3/envs/py36qt5/lib/python3.6/site-packages/h5py/__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
-      "  from ._conv import register_converters as _register_converters\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
     "import h5py\n",
+    "import os\n",
     "\n",
     "from PyQt5.QtWidgets import QFileDialog\n",
     "\n",
@@ -59,9 +52,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Using original video /media/aleksejs/DataHDD/work/data/Pia/Tracking20181022_compressed/2018.10.22_18_01_56.avi\n",
-      "Using tracking file /media/aleksejs/DataHDD/work/codes/image-analysis/behavioural/DeepLabCut_old/DeepLabCut/Generating_a_Training_Set/data-pia_shaved_running_1_test/CollectedData_Pia.csv\n",
-      "Results will be saved in /media/aleksejs/DataHDD/work/codes/image-analysis/behavioural\n"
+      "Using original video /run/user/1000/gvfs/smb-share:server=130.60.51.15,share=neurophysiology-storage2/Sipila/aaaPDDATA/ALLDATA/TRAININGvideos/2018.10.23_16_30_36_mouse4Day3.avi\n",
+      "Using tracking file /run/user/1000/gvfs/smb-share:server=130.60.51.15,share=neurophysiology-storage2/Sipila/aaaPDDATA/ALLDATA/TRAININGvideos/2018.10.23_16_30_36_mouse4Day3DeepCut_resnet50_RunningTask_Big_1Mar21shuffle1_183000.csv\n",
+      "Results will be saved in /home/alyosha/work/git/dlc-scripts/results\n"
      ]
     }
    ],
@@ -77,12 +70,13 @@
     "  \"STICKMAN_CROP_Y\"  : None\n",
     "}\n",
     "\n",
-    "param[\"CONF_FNAME\"] = gui_fname(\"Select config file...\", \"./\", \"Config Files (*.yaml)\")\n",
+    "#param[\"CONF_FNAME\"] = gui_fname(\"Select config file...\", \"./\", \"Config Files (*.yaml)\")\n",
     "param[\"AVI_FNAME\"] = gui_fname(\"Select original video file...\", \"./\", \"Video Files (*.avi)\")\n",
-    "param[\"CSV_FNAME\"] = gui_fname(\"Select tracking file...\", \"./\", \"CSV Files (*.csv)\")\n",
-    "param[\"REZ_FPATH\"] = gui_fpath(\"Select result path\", \"./\")\n",
+    "tmp_pwd = os.path.dirname(param[\"AVI_FNAME\"])\n",
+    "param[\"CSV_FNAME\"] = gui_fname(\"Select tracking file...\", tmp_pwd, \"CSV Files (*.csv)\")\n",
+    "param[\"REZ_FPATH\"] = gui_fpath(\"Select result path\", tmp_pwd)\n",
     "\n",
-    "print(\"Using config file\", param[\"CONF_FNAME\"])\n",
+    "#print(\"Using config file\", param[\"CONF_FNAME\"])\n",
     "print(\"Using original video\", param[\"AVI_FNAME\"])\n",
     "print(\"Using tracking file\", param[\"CSV_FNAME\"])\n",
     "print(\"Results will be saved in\", param[\"REZ_FPATH\"])"
@@ -102,23 +96,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Movie has 5410 frames and 5 nodes\n",
+      "Average lengths of edges are [ 95.58529499 193.69746398  35.53466111  38.53038473]\n",
+      "Total number of unconfident frames 825\n",
+      "Total number of frames with bad velocity 3\n",
+      "Total number of frames with bad edges 828\n",
+      "Total number of frames bad in any way 828\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'convV' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-6-6fd9b1c826a1>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     31\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     32\u001b[0m \u001b[0mplotPerrCDF\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0max\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mperr\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mparam\u001b[0m\u001b[0;34m)\u001b[0m                            \u001b[0;31m# Plot CDF of node confidence\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 33\u001b[0;31m \u001b[0mplotVelocityCDF\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0max\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mV\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mVLowConf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mparam\u001b[0m\u001b[0;34m)\u001b[0m                 \u001b[0;31m# Plot CDF of node velocities\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     34\u001b[0m \u001b[0mplotRelEdgeLenDistr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0max\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0medgeLength\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0medgeLowConf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mparam\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m# Plot relative edge length distributions\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     35\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/home/alyosha/work/git/dlc-scripts/scripts/lib/plots.py\u001b[0m in \u001b[0;36mplotVelocityCDF\u001b[0;34m(ax, V, VLowConf, param)\u001b[0m\n\u001b[1;32m     17\u001b[0m \u001b[0;31m# Find all nodes for which velocity is confident, plot velocity CDF\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     18\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mplotVelocityCDF\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0max\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mV\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mVLowConf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mparam\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 19\u001b[0;31m     \u001b[0mnRows\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnNodes\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mconvV\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     20\u001b[0m     \u001b[0mframeCDF\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlinspace\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnRows\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnRows\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     21\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'convV' is not defined"
+     ]
+    }
+   ],
    "source": [
     "#########################\n",
     "# Parse CSV file\n",
     "#########################\n",
     "\n",
-    "X, Y, P = parse_dlc_csv(fname, param):\n",
+    "X, Y, P = parse_dlc_csv(param[\"CSV_FNAME\"], param)\n",
     "nFrames, nNodes = X.shape\n",
+    "print(\"Movie has\", nFrames, \"frames and\", nNodes, \"nodes\")\n",
     "    \n",
     "#########################\n",
     "# Compute Constraints\n",
     "#########################\n",
-    "nodeLowConf, perr = likelihood_constrain(P, param)\n",
+    "perr, nodeLowConf = likelihood_constrain(P, param)\n",
     "V, VLowConf, nodeBadV = velocity_constrain(X, Y, nodeLowConf, param)\n",
     "edgeLength, edgeLowConf, edgeBadLength = edge_constrain(X, Y, nodeLowConf, param)\n",
     "\n",
@@ -127,7 +145,7 @@
     "framesBadEdgeLen = np.sum(edgeBadLength, axis=1) > 0\n",
     "framesBadTotal   = np.logical_or(framesLowConf, framesBadV, framesBadEdgeLen)\n",
     "\n",
-    "print(\"Average lengths of edges are\", edgeLenAvg)\n",
+    "print(\"Average lengths of edges are\", np.mean(edgeLength, axis=0))\n",
     "print(\"Total number of unconfident frames\", np.sum(framesLowConf > 0))\n",
     "print(\"Total number of frames with bad velocity\", np.sum(framesBadV))\n",
     "print(\"Total number of frames with bad edges\", np.sum(framesBadEdgeLen))\n",
@@ -314,9 +332,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python (dlc)",
    "language": "python",
-   "name": "python3"
+   "name": "dlc_ker"
   },
   "language_info": {
    "codemirror_mode": {
@@ -328,7 +346,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
