own marking via matplotlib

--- a/scripts/dlc-postprocess.ipynb
+++ b/scripts/dlc-postprocess.ipynb
@@ -62,7 +62,6 @@
    ],
    "source": [
     "param = {\n",
-    "  \"NODE_NAMES\"       : [\"ShoulderBlade\", \"Shoulder\", \"Wrist\", \"Finger\", \"Tip\"],\n",
     "  \"EDGE_NODES\"       : [[0,1], [1,2], [2,3], [3,4]],\n",
     "  \"NODE_MAX_V\"       : [70, 70, 70, 70, 70],\n",
     "  \"EDGE_MIN_R\"       : [0.5, 0.5, 0.5, 0.5],\n",
@@ -132,7 +131,7 @@
     "# Parse CSV file\n",
     "#########################\n",
     "\n",
-    "X, Y, P = parse_dlc_csv(param[\"CSV_FNAME\"], param)\n",
+    "param[\"NODE_NAMES\"], X, Y, P = parse_dlc_csv(param[\"CSV_FNAME\"])\n",
     "nFrames, nNodes = X.shape\n",
     "print(\"Movie has\", nFrames, \"frames and\", nNodes, \"nodes\")\n",
     "    \n",
