--- a/scripts/dlc-postprocess.ipynb
+++ b/scripts/dlc-postprocess.ipynb
@@ -11,18 +11,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/anaconda3/envs/py36qt5/lib/python3.6/site-packages/h5py/__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
-      "  from ._conv import register_converters as _register_converters\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -36,20 +27,19 @@
     "\n",
     "# import deeplabcut\n",
     "\n",
-    "from lib.parse_dlc_csv import parse_dlc_csv\n",
+    "from lib.parse_dlc_results import parse_dlc_csv\n",
     "from lib.constraints import compute_constraints\n",
     "from lib.plots import plotStatistics\n",
     "from lib.stickman import stickman\n",
     "from lib.qt_wrapper import gui_fname, gui_fpath\n",
-    "from lib.sampling import selectUniform"
+    "from lib.sampling import selectUniform\n",
+    "from lib.hdf5_wrapper import npStrArr2h5"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [],
    "source": [
     "%load_ext autoreload\n",
@@ -3582,11 +3572,6 @@
     }
    ],
    "source": [
-    "def npStrArr2h5(h5file, arr, key):\n",
-    "    keyGroup = rezfile.create_dataset(key, (len(arr),), dtype=h5py.special_dtype(vlen=str))\n",
-    "    for i in range(nNodes):\n",
-    "        keyGroup[i] = keyGroup[i]\n",
-    "\n",
     "# Set all bad coordinates to NAN\n",
     "for i in range(nNodes):\n",
     "    # X[framesBadTotal, :] = np.nan\n",
@@ -3629,7 +3614,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
