--- a/scripts/dlc-training-1-preprocess.ipynb
+++ b/scripts/dlc-training-1-preprocess.ipynb
@@ -322,9 +322,9 @@
    "version": "0.3.2"
   },
   "kernelspec": {
-   "display_name": "dlc-kernel",
+   "display_name": "Python (dlc)",
    "language": "python",
-   "name": "dlc"
+   "name": "dlc_ker"
   },
   "language_info": {
    "codemirror_mode": {
@@ -336,7 +336,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.6.7"
   },
   "varInspector": {
    "cols": {
